<resources>
    <string name="app_name">Triv</string>
    <string name="loading_question">Loading&#8230;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_category">Choose A Category</string>
    <string name="category_sports">Sports</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_history">History</string>
    <string name="category_politics">Politics</string>
    <string name="category_animals">Animals</string>
    <string name="category_geography">Geography</string>
    <string name="category_random">Random</string>
    <string name="title">triv</string>
    <string name="category_label">Category</string>
    <string name="difficulty_label">Difficulty</string>
    <string name="question_mark">\?</string>
    <string name="question_label">Question</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="incorrect_answer">Your Answer</string>
    <string name="learn_more">Learn More</string>

</resources>
