<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/categoryTextView"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/category_label"
            android:textColor="@color/_colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_label"
            android:id="@+id/questionTextView"
            android:layout_below="@+id/categoryTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="italic"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficulty_label"
                android:id="@+id/difficultyTextView"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/_colorAccent"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>