<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.guest.triv.ui.QuizActivity"
    android:background="@color/_colorAccent">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_mark"
        android:id="@+id/answerButton3"
        android:layout_gravity="center_horizontal"
        android:typeface="monospace"
        android:textColor="@color/_primaryText"
        android:background="@color/_icons"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_mark"
        android:id="@+id/answerButton2"
        android:layout_gravity="center_horizontal"
        android:typeface="monospace"
        android:textColor="@color/_primaryText"
        android:background="@color/_icons"
        android:layout_above="@+id/answerButton3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_mark"
        android:id="@+id/answerButton1"
        android:layout_gravity="center_horizontal"
        android:typeface="monospace"
        android:textColor="@color/_primaryText"
        android:background="@color/_icons"
        android:layout_above="@+id/answerButton2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_mark"
        android:id="@+id/answerButton0"
        android:layout_gravity="center_horizontal"
        android:typeface="monospace"
        android:textColor="@color/_primaryText"
        android:background="@color/_icons"
        android:layout_above="@+id/answerButton1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/category_label"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/_primaryText"
        android:typeface="monospace"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentLeft="false"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/coin1"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:id="@+id/iv_coin"
        android:layout_alignBottom="@+id/categoryView"
        android:layout_toStartOf="@+id/tv_coin_count"
        android:layout_toLeftOf="@+id/tv_coin_count" />

    <TextView
        android:text="x 0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_coin_count"
        android:layout_toLeftOf="@+id/textView3"
        android:layout_toStartOf="@+id/textView3"
        android:layout_alignBottom="@+id/iv_coin"
        android:layout_alignParentTop="true"
        android:paddingTop="10dp"
        android:layout_marginRight="30dp"
        android:textSize="20sp"/>

    <TextView
        android:text="Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/answerButton0"
        android:layout_alignEnd="@+id/answerButton0"
        android:layout_marginRight="31dp"
        android:layout_marginEnd="31dp"/>

    <TextView
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_score"
        android:layout_alignBaseline="@+id/tv_coin_count"
        android:layout_alignBottom="@+id/tv_coin_count"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5"
        android:layout_marginRight="13dp"
        android:layout_marginEnd="13dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/loading_question"
        android:id="@+id/questionView"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/_primaryLight"
        android:typeface="monospace"
        android:layout_marginTop="75dp"
        android:layout_below="@+id/categoryView"
        android:layout_centerHorizontal="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/question_mark"
        android:id="@+id/categoryView"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/_primaryText"
        android:typeface="monospace"
        android:textSize="12sp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pb_question_timer"
        android:layout_below="@+id/categoryView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:max="200"
        android:progress="200"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"/>

</RelativeLayout>
